# advent-of-code-2023

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/aoc2023/: __init__.py  __main__.py  _registry.py  _util.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
src/aoc2023/_rust/: day02.pyi
src/rust/: Cargo.toml
src/rust/src/: day02.rs  day16.rs  lib.rs
